--- a/templates/editkeyfilter.html
+++ b/templates/editkeyfilter.html
@@ -67,9 +67,9 @@
                             <input type="text" class="form-control" name="keyword" id="keyword" value="{{ keyfilter.keyword }}" placeholder="多个关键字使用空格分割，例如（apt ioc web）" >
                           </div>
                             <div style="float: right;">
-                              <a href="/rsslist" class="btn btn-info btn-fill">Cancel</a>
+                              <a href="/rsslist" class="btn btn-info btn-fill">返回</a>
 
-                              <button type="submit" class="btn btn-info btn-fill">Submit</button>
+                              <button type="submit" class="btn btn-info btn-fill">提交</button>
 
                             </div>
                             <div class="clearfix"></div>
