--- a/templates/editrss.html
+++ b/templates/editrss.html
@@ -58,9 +58,9 @@
                             <input type="text" class="form-control" name="url" id="url" value="{{ erss.url }}" >
                           </div>
                             <div style="float: right;">
-                              <a href="/rsslist" class="btn btn-info btn-fill">Cancel</a>
+                              <a href="/rsslist" class="btn btn-info btn-fill">返回</a>
 
-                              <button type="submit" class="btn btn-info btn-fill">Submit</button>
+                              <button type="submit" class="btn btn-info btn-fill">提交</button>
 
                             </div>
                             <div class="clearfix"></div>
@@ -83,9 +83,9 @@
                             <input type="text" class="form-control" name="url" id="url" placeholder="请输入RSS链接" >
                           </div>
                             <div style="float: right;">
-                              <a href="/rsslist" class="btn btn-info btn-fill">Cancel</a>
+                              <a href="/rsslist" class="btn btn-info btn-fill">返回</a>
 
-                              <button type="submit" class="btn btn-info btn-fill">Submit</button>
+                              <button type="submit" class="btn btn-info btn-fill">提交</button>
 
                             </div>
                             <div class="clearfix"></div>
