--- a/templates/contextsearchlist.html
+++ b/templates/contextsearchlist.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 <script src="../../static/js/pdfobject.js"></script>
+<script src="lazysizes.min.js" async=""></script>
 {% block content %}
 <div class="main-panel">
   <nav class="navbar navbar-default navbar-fixed">
@@ -89,7 +90,7 @@
                                 {% if i.filedir == '-' or i.filedir == '' %}
                                     暂无快照
                                 {% else %}
-                                    <iframe style="width: 100%;height:100%;display:inline-table;" src="{{ i.filedir }}"></iframe>
+                                    <iframe class="lazyload" style="width: 100%;height:100%;display:inline-table;" src="{{ i.filedir }}"></iframe>
                                 {% endif %}
                             </div>
                         </div>
@@ -100,64 +101,7 @@
                     <div id="barcon1" name="barcon1"></div>
 
                 </div>
-                {% comment %}<div name="tab_div" id="tab_1_content" style="margin-top:30px" class="content table-responsive table-full-width">
-                  <table id="table_1" class="table table-hover table-striped">
-                    <thead>
-                      <th width="30px">发布者</th>
-                      <th width="100px">发布时间</th>
-                      <th width="100px">标题</th>
-                      <th width="100px">RSS来源</th>
-                      <th width="50px">快照</th>
-                      <th width="50px">详情</th>
-                    </thead>
-                    <tbody>
-                        {% for i in messages %}
-                        <tr>
-                            {% if i.author == '' %}
-                                <td>匿名</td>
-                            {% else %}
-                                <td>{{ i.author }}</td>
-                            {% endif %}
-                            <td>{{ i.date }}</td>
-                            <td>{{ i.title }}</td>
-                            <td>{{ i.rssname }}</td>
-                            {% if i.filedir == '' %}
-                                <td>暂无快照</td>
-                            {% else %}
-                                <td><a href="javascript:void(0);" onclick="seepdf('{{ i.filedir }}')">阅读</a></td>
-                            {% endif %}
-                            <td><a href="javascript:void(0);" onclick="updatenews('{{ i.link }}','{{ i.id }}')">查看</a></td>
-                        </tr>
-                            <tr><td colspan="6">
-                                <table class="table table-hover table-striped">
-                                  <thead>
-                                    <th width="30px">发布者</th>
-                                    <th width="100px">发布时间</th>
-                                    <th width="100px">标题</th>
-                                    <th width="100px">RSS来源</th>
-                                    <th width="50px">快照</th>
-                                    <th width="50px">详情</th>
-                                  </thead>
-                                    <tbody>
-                                        <td>sadf</td>
-                                        <td>sadf</td>
-                                        <td>sadf</td>
-                                        <td>sadf</td>
-                                        <td>sadf</td>
-                                        <td>sadf</td>
-                                    </tbody>
-                                </table>
-                            </td></tr>
-                        {% endfor%}
-                    </tbody>
-                  </table>
-                    <!--<ul class="pager">
-                        <li><a href="#">Previous</a></li>
-                        <li><a href="#">Next</a></li>
-                    </ul>-->
-                    <div id="barcon1" name="barcon1"></div>
-                </div>
-                {% endcomment %}
+
 
               </div>
             </div>
