--- a/templates/contextsearchlist.html
+++ b/templates/contextsearchlist.html
@@ -38,12 +38,12 @@
                         <div class="panel-heading">
                             <h4 class="panel-title">
                                 <a data-toggle="collapse" data-parent="#accordion"
-                                   href="#collapse{{ i.id }}">
+                                    onclick="loadpdf(this,{{ i.id }})">
                                     {{ i.title }}
                                 </a>
                             </h4>
                         </div>
-                        <div id="collapse{{ i.id }}" class="panel-collapse collapse" >
+                        <div id="collapse{{ i.id }}" class="panel-collapse collapse">
                             <div class="panel-body">
                                 <table style="table-layout:fixed;" class="table table-responsive table-hover table-striped">
                                   <thead>
@@ -89,8 +89,9 @@
                             <div class="panel-body" style="height:600px;">
                                 {% if i.filedir == '-' or i.filedir == '' %}
                                     暂无快照
+
                                 {% else %}
-                                    <iframe class="lazyload" style="width: 100%;height:100%;display:inline-table;" src="{{ i.filedir }}"></iframe>
+                                    <iframe id="pdf{{ i.id }}" style="width: 100%;height:100%;display:inline-table;" name="{{ i.filedir }}"></iframe>
                                 {% endif %}
                             </div>
                         </div>
@@ -113,8 +114,10 @@
       </div>
     </div>
     <script type="text/javascript">
-    function loadpdf(path,id) {
-        PDFObject.embed(path, id);
+    function loadpdf(obj,id) {
+        obj.href = "#collapse"+id
+        pdfiframe = document.getElementById("pdf"+id);
+        pdfiframe.src = pdfiframe.name
     }
 
     function seepdf(data) {
