--- a/templates/editkeyfilter.html
+++ b/templates/editkeyfilter.html
@@ -64,7 +64,7 @@
                           </div>
                           <div class="form-group">
                             <label>关键词</label>
-                            <input type="text" class="form-control" name="keyword" id="keyword" value="{{ keyfilter.keyword }}" placeholder="多个关键字使用空格分割，例如（apt ioc web）" >
+                            <input type="text" class="form-control" name="keyword" id="keyword" value="{{ keyfilter.keyword }}" placeholder="多个关键字使用逗号分割，例如（apt,ioc,web）" >
                           </div>
                             <div style="float: right;">
                               <a href="/rsslist" class="btn btn-info btn-fill">返回</a>
