--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,6 @@
 {% block head %}
 <meta charset="utf-8" />
-<link rel="icon" type="image/png" href="../../static/img/logo2.png">
+<link rel="icon" type="image/png" style="width: 100px;height: 80px" href="../../static/img/justlogo.png">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
 <title>拨雾</title>
