--- a/templates/login.html
+++ b/templates/login.html
@@ -52,7 +52,7 @@
 	<form class="form-signin" action="/login" method="POST">
         {% csrf_token %}
 		<div align="center"><h2 class="form-signin-heading">
-			<img style="width: 80px; height: 80px" src="/static/img/logo2.png"> 拨雾</h2></div>
+			<img style="width: 300px; height: 140px" src="/static/img/bowulogo2.png"></h2></div>
 		<br>
 		<input id="user" class="form-control" name="user" type="text" value="" placeholder="Username">
 		<br>
