--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -2,7 +2,7 @@
 
   <div class="sidebar-wrapper">
     <div class="logo">
-        <img style="width: 200px; height: 90px;" src="/static/img/bowuleftlogo2.png" id="plat_graph" class="center-block">
+        <img style="width: 150px; height: 70px;" src="/static/img/bowuleftlogo2.png" id="plat_graph" class="left">
 
     </div>
 
