将关键词用label分割

--- a/templates/editkeyfilter.html
+++ b/templates/editkeyfilter.html
@@ -67,7 +67,7 @@
                             <input type="text" class="form-control" name="keyword" id="keyword" value="{{ keyfilter.keyword }}" placeholder="多个关键字使用逗号分割，例如（apt,ioc,web）" >
                           </div>
                             <div style="float: right;">
-                              <a href="/rsslist" class="btn btn-info btn-fill">返回</a>
+                              <a href="/keyfilters" class="btn btn-info btn-fill">返回</a>
 
                               <button type="submit" class="btn btn-info btn-fill">提交</button>
 
@@ -95,7 +95,7 @@
                             <input type="text" class="form-control" name="keyword" id="keyword" placeholder="多个关键字使用逗号分割，例如（apt,ioc,web）" >
                           </div>
                             <div style="float: right;">
-                              <a href="/rsslist" class="btn btn-info btn-fill">返回</a>
+                              <a href="/keyfilters" class="btn btn-info btn-fill">返回</a>
 
                               <button type="submit" class="btn btn-info btn-fill">提交</button>
 
@@ -165,4 +165,7 @@
 </div>
 </div>
 {% endcomment %}
+    <script >
+
+    </script>
 {% endblock content %}
