--- a/templates/login.html
+++ b/templates/login.html
@@ -54,9 +54,9 @@
 		<div align="center"><h2 class="form-signin-heading">
 			<img style="width: 300px; height: 140px" src="/static/img/bowulogo2.png"></h2></div>
 		<br>
-		<input id="user" class="form-control" name="user" type="text" value="" placeholder="Username">
+		<input id="user" class="form-control" name="user" type="text" value="" placeholder="用户名">
 		<br>
-		<input id="password" class="form-control" name="password" type="password" value="" placeholder="Password">
+		<input id="password" class="form-control" name="password" type="password" value="" placeholder="密码">
 		<br>
 		<div align="center"><button style="width: 100%" class="btn btn-info btn-fill" type="submit">登录</button></div>
 		<br>
