--- a/templates/rsslist.html
+++ b/templates/rsslist.html
@@ -42,9 +42,9 @@
                       <th width="10%">序号</th>
                       <th width="20%">名字</th>
                       <th width="20%" >别称</th>
-                      <th width="45%">链接</th>
+                      <th width="40%">链接</th>
                       {% if iseditrss %}
-                      <th width="5%" style="float: right;">修改</th>
+                      <th width="10%" style="">修改</th>
                       {% endif %}
                     </thead>
                     <tbody>
