--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -15,7 +15,7 @@
       </li>
       <li>
         <a href="/news">
-          <i class="pe-7s-global"></i>
+          <i class="pe-7s-file"></i>
           <p>消息列表</p>
         </a>
       </li>
@@ -27,13 +27,13 @@
       </li>
       <li>
         <a href="/keyfilters">
-          <i class="pe-7s-users"></i>
+          <i class="pe-7s-target"></i>
           <p>消息设置</p>
         </a>
       </li>
       <li>
         <a href="/usersetting">
-          <i class="pe-7s-target"></i>
+          <i class="pe-7s-users"></i>
           <p>用户设置</p>
         </a>
       </li>
