--- a/templates/error.html
+++ b/templates/error.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" type="image/png" href="../../static/img/favicon.ico">
+  <link rel="icon" type="image/png" href="../../static/img/justlogo.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-  <title>threat_note | Security Researchers Notebook</title>
+  <title>拨雾</title>
 
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
   <meta name="viewport" content="width=device-width" />
