--- a/templates/keyfilter.html
+++ b/templates/keyfilter.html
@@ -39,7 +39,7 @@
           <div style="margin-top:1px" class="content table-responsive table-full-width">
                   <table id="table_1" name="table_1" class="table table-hover table-striped">
                     <thead>
-                      <th width="30px">标签名称</th>
+                      <th width="30px">背景名称</th>
                       <th width="30px">关键点</th>
                       <th width="30px">关键词</th>
                       <th width="30px">编辑</th>
