--- a/templates/newlist.html
+++ b/templates/newlist.html
@@ -46,7 +46,8 @@
                       <th width="100px">发布时间</th>
                       <th width="100px">标题</th>
                       <th width="100px">RSS来源</th>
-                      <th width="50px">标签</th>
+                      <th width="100px">文章标签</th>
+                      <th width="50px">背景</th>
                       <th width="50px">本地快照</th>
                       <th width="50px">详情</th>
                     </thead>
@@ -69,7 +70,8 @@
                             <td style="word-wrap:break-word;word-break:break-all;">{{ i.date }}</td>
                             <td style="word-wrap:break-word;word-break:break-all;">{{ i.title }}</td>
                             <td style="word-wrap:break-word;word-break:break-all;">{{ i.rssname }}</td>
-                            <td style="word-wrap:break-word;word-break:break-all;">{{ i.tags }}</td>
+                            <td style="word-wrap:break-word;word-break:break-all;">{{ i.tags }}<i class="fa fa-plus" onclick="edittags('{{ i.id }}','{{ i.tags }}')"></i></td>
+                            <td style="word-wrap:break-word;word-break:break-all;">{{ i.attr }}</td>
                             {% if i.filedir == '' %}
                                 <td>暂无快照</td>
                             {% else %}
@@ -101,7 +103,7 @@
                       <th width="100px">发布时间</th>
                       <th width="100px">标题</th>
                       <th width="100px">RSS来源</th>
-                      <th width="50px">标签</th>
+                      <th width="50px">背景</th>
                       <th width="50px">本地快照</th>
                       <th width="50px">原网页</th>
                     </thead>
@@ -124,7 +126,8 @@
                             <td style="word-wrap:break-word;word-break:break-all;">{{ i.date }}</td>
                             <td style="word-wrap:break-word;word-break:break-all;">{{ i.title }}</td>
                             <td style="word-wrap:break-word;word-break:break-all;">{{ i.rssname }}</td>
-                            <td style="word-wrap:break-word;word-break:break-all;">{{ i.tags }}</td>
+                            <td style="word-wrap:break-word;word-break:break-all;">{{ i.tags }}<i class="fa fa-plus"></i></td>
+                            <td style="word-wrap:break-word;word-break:break-all;">{{ i.attr }}</td>
                             {% if i.filedir == '' or i.filedir == '-' %}
                                 <td>暂无快照</td>
                             {% else %}
@@ -148,6 +151,27 @@
       </div>
     </div>
     <script type="text/javascript">
+
+    function edittags(id,word) {
+        word = prompt("文章tag以,分割:",word);
+        if (word != null){
+            var message = {'id':id,'word':word}
+            $.ajax({
+                url:'/editmesstag',
+                dataType:'json',
+                data:message,
+                success:function (result) {
+                    alert(result[1])
+                    if(result[0] == 1){
+                        window.location.href="/news";
+                        return
+                    }
+                }
+            })
+        }
+
+    }
+
     function seepdf(data) {
         window.open(data);
     }
