--- a/templates/newlist.html
+++ b/templates/newlist.html
@@ -103,6 +103,7 @@
                       <th width="100px">发布时间</th>
                       <th width="100px">标题</th>
                       <th width="100px">RSS来源</th>
+                      <th width="100px">文章标签</th>
                       <th width="50px">背景</th>
                       <th width="50px">本地快照</th>
                       <th width="50px">原网页</th>
