添加自定义消息功能

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -13,7 +13,7 @@
 
   <!--  Notifications Plugin    -->
   <script src="../../static/js/bootstrap-notify.js"></script>
-
+    <script src="../../static/laydate/laydate.js"></script>
   <!--  Google Maps Plugin    -->
   <!--<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>-->
 
