--- a/templates/header.html
+++ b/templates/header.html
@@ -17,7 +17,7 @@
 
 <!--  Light Bootstrap Table core CSS    -->
 <link href="../../static/css/light-bootstrap-dashboard.css" rel="stylesheet"/>
-
+<link href="../../static/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
 <!--  CSS for Demo Purpose, don't include it in your project     -->
 <link href="../../static/css/demo.css" rel="stylesheet" />
 
